2011-01-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/BaseHandler.h: Moved typedefs to BaseHandler.
	* src/network/Server.cpp: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/Handler.h: Likewise.

2011-01-23  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/BeliefState.h: Fix output debug.

	* testsuite/testJoinThread.cpp: Add test case for JoinThread.
	* testsuite/Makefile.am: Likewise.

	* src/network/JoinThread.cpp: Fix join.

	* include/network/JoinThread.h: Remove map ctxid--offset.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/network/ConcurrentMessageQueueHelper.h: Add assert.

2011-01-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/ConcurrentMessageQueue.h: Add sanity checks.

	* include/network/Handler.tcc: Handle client terminate.
	* include/network/AsynClient.h: Likewise.
	* include/network/AsynClient.tcc: Likewise.

	* configure.ac: Compile with NDEBUG and -O3 by default.

	* src/dmcsd.cpp: Show compile-time options.
	* src/dmcsc.cpp: Likewise.

	* include/network/AsynClient.h: Add callback.
	* include/network/AsynClient.tcc: Likewise.

2011-01-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: In leaf case, send NULL model after
	receiving UNSAT.

	* src/network/OutputThread.cpp: Fix bug: always HEADER_ANS.

	* src/network/JoinThread.cpp: End of join is a NULL model.

	* src/dmcsc.cpp: Get the number of answers.

	* include/network/AsynClient.tcc: Send a message after request
	next model. We can later change this to just sending HEADER_NEXT.

	* include/network/AsynClient.h: Announce number of answers.

	* include/dmcs/StreamingBackwardMessage.h: More meaningful debug infor.

	* log4cxx.cfg: Enable TRACE.

	* include/network/Makefile.am: Now use AsynClient.
	* src/dmcsc.cpp: Likewise.

	* include/network/BaseClient.h: Better safe than sorry.

	* include/network/AsynClient.h: Turn into end-user's client.
	* include/network/AsynClient.tcc: Likewise.
